# snooker-scoreboard

./: CMakeLists.txt  README.md  main.cpp
App/: GameApp.cpp  GameApp.h
Common/: Frame.h  Match.h
Data/: demo.json
View/: Window.cpp  Window.h  Window.ui
ViewModel/: MatchThread.cpp  MatchThread.h
